2007-11-11  Mike Hommey  <mh+webkit@glandium.org>

Reviewed by Maciej.

        Fix http://bugs.webkit.org/show_bug.cgi?id=14521
        Bug 14521: JavaScriptCore fails to build on Linux/PPC gcc 4.1.2

        * wtf/TCSpinLock.h:
        (TCMalloc_SpinLock::Unlock): Change constraint from o to m.


git-svn-id: svn://svn.chromium.org/blink/trunk@27708 bbb929c8-8fbe-4397-9dbb-9b2b20218538