third_party/WebKit/JavaScriptCore/wtf/TCSpinLock.h
@@ -107,7 +107,7 @@ struct TCMalloc_SpinLock {
       ("isync\n\t"
        "eieio\n\t"
        "stw %1, %0"
-       : "=o" (private_lockword_) 
+       : "=m" (private_lockword_)
        : "r" (0)
        : "memory");
 #endif
